--- a/index.html
+++ b/index.html
@@ -23,9 +23,26 @@
             <li><button class="btn">Hire me</button></li>
           </uL>
         </nav>
-    </header>
 
-    
+        <section id="banner">
+            <div class="banner-content"> 
+                <h2>Hi, I am</h2>
+                <h1>Md: Eyasin Arafat</h1>
+                <P>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</P>
+
+                <div>
+                    <button class="btn">Download CV</button>
+                    <button class="btn">Contact</button>
+                </div>
+            </div>
+
+            <div class="banner-image">
+                <img src="images/hardy.png"  alt="">
+            </div>
+
+        </section>
+
+    </header>
     
 </body>
 </html>
